# brace-hook

./: Cargo.toml  README.md
.github/workflows/: ci.yml
crates/brace-hook/: Cargo.toml
crates/brace-hook-gen/: Cargo.toml
crates/brace-hook-gen/src/: attr.rs  declaration.rs  lib.rs  lifetime.rs  registration.rs  signature.rs
crates/brace-hook-macros/: Cargo.toml
crates/brace-hook-macros/src/: args.rs  attr.rs  declaration.rs  lib.rs  registration.rs  signature.rs
crates/brace-hook/src/: error.rs  hook.rs  lib.rs  macros.rs  registry.rs
crates/brace-hook/tests/: integration.rs
