[package]
name = "brace-hook-macros"
version = "0.1.0"
authors = ["Daniel Balcomb <daniel.balcomb@gmail.com>"]
description = "Procedural macros for hook discovery."
repository = "https://github.com/brace-rs/brace-hook"
license = "MIT OR Apache-2.0"
edition = "2018"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "1.0", features = ["visit-mut"] }
