[package]
name = "brace-hook"
version = "0.1.0"
authors = ["Daniel Balcomb <daniel.balcomb@gmail.com>"]
description = "Hook discovery for dynamic codebases."
repository = "https://github.com/brace-rs/brace-hook"
license = "MIT OR Apache-2.0"
edition = "2018"

[dependencies]
brace-hook-macros = { path = "../brace-hook-macros" }
dyn-clone = "1.0"
inventory = "0.1"
once_cell = "1.4"

[dev-dependencies]
paste = "0.1"
